# sentinel

./: .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.asimov/: coding-standards.json  project.yaml  roadmap.yaml  sprint.json
.github/workflows/: ci.yml
docs/adr/: 001-python-over-typescript.md  002-forge-mcp-over-cli-subprocess.md  003-custom-stategraph-over-create-react-agent.md  004-multi-provider-llm-support.md  005-ref-mcp-over-cli-subprocess.md  006-five-agent-pipeline.md  007-sqlite-checkpointer.md  008-structured-output.md  009-qdrant-rag-historical-earnings.md  010-hitl-interrupt-before-synthesizer.md  011-sentinel-as-mcp-server.md
src/sentinel/: __init__.py  __main__.py  approval.py  checkpointer.py  llm.py  output.py
src/sentinel/agents/: __init__.py  modeler.py  research.py  retriever.py  risk_analyst.py  scenario_planner.py  synthesizer.py
src/sentinel/graph/: __init__.py  pipeline.py  state.py
src/sentinel/mcp/: __init__.py  server.py
src/sentinel/rag/: __init__.py  store.py
tests/: test_approval.py  test_checkpointer.py  test_llm.py  test_main.py  test_output.py
tests/agents/: __init__.py  test_modeler.py  test_research.py  test_retriever.py  test_risk_analyst.py  test_scenario_planner.py  test_synthesizer.py
tests/fixtures/: risk_model.yaml  simple_model.yaml
tests/graph/: test_pipeline.py  test_state.py
tests/mcp/: __init__.py  test_integration.py  test_server.py
tests/rag/: __init__.py  test_store.py
tests/tools/: __init__.py  test_forge_mcp.py  test_ref_fetch.py  test_ref_mcp.py
(+4 files in other folders)
