[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "0.2.0"
description = "Multi-agent earnings analysis — LangGraph agents with Forge deterministic calculations"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langchain-core>=0.3",
    "langsmith>=0.3",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.3"]
google = ["langchain-google-genai>=2.0"]
groq = ["langchain-groq>=0.3"]
all-llms = ["sentinel[openai,google,groq]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external binaries (forge, ref)",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # incompatible with D211 (no blank line before class)
    "D213",   # incompatible with D212 (multi-line summary first line)
    "COM812", # trailing comma — conflicts with ruff formatter
    "ISC001", # implicit string concat — conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert is pytest's core API — no alternative
]

[tool.coverage.run]
source = ["src/sentinel"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
